Bug 378648 - Critical OpenVPN connection details are missing and editing removes manual options
Summary: Critical OpenVPN connection details are missing and editing removes manual op...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-11 05:23 UTC by Paul
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul 2017-04-11 05:23:04 UTC
Critical OpenVPN connection details are missing and editing removes manual options. Things such as ping interval and ping-exit-or-restart, max routes, IPv6-tun-link are required for basic, reliable functionality and are both missing from the GUI and removed if manually applied whenever the settings are modified.
Comment 1 Jan Grulich 2017-04-11 11:43:05 UTC
Git commit ea13c657dbc34ef0323bb7460a3d8e291d361a2f by Jan Grulich.
Committed on 11/04/2017 at 11:42.
Pushed by grulich into branch 'master'.

OpenVPN: add new properties (sync with NM)

M  +18   -0    vpn/openvpn/nm-openvpn-service.h
M  +574  -144  vpn/openvpn/openvpnadvanced.ui
M  +130  -21   vpn/openvpn/openvpnadvancedwidget.cpp
M  +11   -1    vpn/openvpn/openvpnadvancedwidget.h

https://commits.kde.org/plasma-nm/ea13c657dbc34ef0323bb7460a3d8e291d361a2f