OpenVPN: add new properties (sync with NM)

BUG:378648